#26 added core openapi and made controller methods more typesafe
